Fix collapsed margin

--- a/src/Root.css
+++ b/src/Root.css
@@ -5,12 +5,11 @@
 html {
   height: 100%;
   width: 100%;
+  background-color: var(--background);
 }
 
 body {
-  height: 100%;
-  width: 100%;
-  background-color: var(--background);
+  margin: 0;
 }
 
 @media (prefers-color-scheme: dark) {
